Run script with Maven